hphp/test/zend/good/ext/gd/tests/imagecolorallocate_error.php.skipif
<?hh
<<__EntryPoint>> function main(): void {
if(!extension_loaded('gd')) {
    die('skip gd extension is not loaded');
}
}
